<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nebula </string>
    <string name="version">Version </string>
    <string name="company_profile">Company Profile</string>
    <string name="products">Products</string>
    <string name="events">Events</string>
    <string name="videos">Videos</string>
    <string name="contact_us">Contact Us</string>
    <string name="notifications">Notifications</string>
    <string name="newsletters">Newsletters</string>
    <string name="edocs">E-Documents</string>
    <string name="ebro">E-Brochures</string>
    <string name="bookingforms">Booking Forms</string>
    <string name="leaflets">Leaflets</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="vision">Vision</string>
    <string name="vision_para">Happy customers all\naround.</string>
    <string name="mission">Mission</string>
    <string name="mission_para">Building hotels,\n homes &amp; dreams.</string>
    <string name="values">Values</string>
    <string name="values_para">We deliver on Promises.\nTrust &amp; Responsibility.</string>
    <string name="pacifica_view">A privately held vertically integrated real estate and hospitality conglomerate with a global presence across USA, India &amp; Mexico and a 2.7 billion USD turnover.</string>
    <string name="futura_view">A diversified group with expertise in contracting &amp; project management for E&amp;P in the O&amp;G industry. Futura is also involved in pharmaceutical, IT and EXIM industry.</string>
    <string name="kesar_view">One of the largest land aggregators of Gujarat with a proven track record of having developed millions of square feet of residential and commercial projects.</string>
    <string name="expertise">Expertise</string>
    <string name="expertise_kesar">Land Aggregation, Affordable Housing</string>
    <string name="expertise_futura">O&amp;G Commissioning and Manpower supply</string>
    <string name="expertise_pacifica">Real Estate development\n(Commercial, Residential)</string>
    <string name="forgot_your_password_customer" translatable="false">Reset Password</string>
    <string name="income_summary">Income Summary</string>
    <string name="promotion_details">Promotion Details</string>
    <string name="downloads">Downloads</string>
    <string name="ahmedabad">Ahmedabad</string>
    <string name="product_name">Product Name</string>
    <string name="bv">BV%</string>
    <string name="bv_">BV : </string>
    <string name="retail_profit">Retail Profit%</string>
    <string name="nv">NV</string>
    <string name="receipt_date">Receipt Date</string>
    <string name="customer_id">Customer ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="emi_no">EMI No</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="type">Type</string>
    <string name="leadership_bonus">Leadership Bonus</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="total">Total</string>
    <string name="Aavaas_sanand" translatable="false">Aavaas, Sanand</string>
    <string name="aavaas_details_sanand" translatable="false">Lavish 4.12 Acre Community | Spacious 1 &amp; 2 BHK Apartments | 11 Towers of 6 Storeys &amp; 2 Towers of 7 Storeys each | Clubhouse with Modern Features | Landscaped
Garden with Lifestyle Facilities for all age groups | 24 x 7 Security Solutions | Conveniently located near Proposed 24 Meter Road at Sanand.</string>
    <string name="project_highlights_sanand" translatable="false">Project Highlights</string>
    <string name="abad_highlight1_sanand" translatable="false">Club House</string>
    <string name="abad_highlight2_sanand" translatable="false">Swimming Pool</string>
    <string name="abad_highlight3_sanand" translatable="false">Jogging Track</string>
    <string name="abad_highlight4_sanand" translatable="false">Badminton</string>
    <string name="abad_highlight5_sanand" translatable="false">Car Parking</string>
    <string name="abad_highlight6_sanand" translatable="false">Box Cricket Pitch</string>
    <string name="abad_highlight7_sanand" translatable="false">Landscaped Garden</string>
    <string name="abad_highlight8_sanand" translatable="false">Senior Citizen Sit Out</string>
    <string name="abad_highlight9_sanand" translatable="false">Kids Play Area</string>
    <string name="Aavaas">Aavaas, Changodar</string>
    <string name="aavaas_details">At affordable luxurious lifestyle for the first time in Ahmedabad that offers best lifestyle experiences at a strategic location of the city. It is time to shape the future and make the dream a reality with the best of facilities and features available in an affordable way.</string>
    <string name="project_highlights">Project Highlights</string>
    <string name="abad_highlight1">1 RK, 1 BHK &amp; 2 BHK Apartments</string>
    <string name="abad_highlight2">56 Buildings of G+3 Storeys</string>
    <string name="abad_highlight3">Over 19 Acres</string>
    <string name="abad_highlight4">Daily conveniences, schools &amp; colleges</string>
    <string name="abad_highlight5">20 minutes from City Center</string>
    <string name="abad_highlight6">Clubhouse with Community Hall</string>
    <string name="Hawthorn">Hawthorn, Dwarka</string>
    <string name="hawthorn_details">Nebula\'s 5 star eco-spiritual resort of luxury Villas is spread across 15 acres. This resort is one of a kind boasting handpicked amenities to immerse you in peace and tranquility of the holy land, soothing your body mind and soul.</string>
    <string name="dwarka_highlight1">200 Villas</string>
    <string name="dwarka_highlight2">60+ Suites</string>
    <string name="dwarka_highlight3">1 BHK (Deluxe &amp; Super Deluxe) &amp; 2 BHK (Super Deluxe)</string>
    <string name="dwarka_highlight4">The Krishna Museum</string>
    <string name="dwarka_highlight5">Stargazing Camps</string>
    <string name="dwarka_highlight6">Dhyana Meditation Garden/Prana Herbal Spa And Wellness Center</string>
    <string name="Aavaas_Hyderabad">Aavaas, Hyderabad</string>
    <string name="hyderabad_details">Situated in the north-west region of Hyderabad, Bachupally is a vicinity that has metamorphosed into a bustling IT hub. Located in the Quthbullapur Mandal, the neighbourhood is encircled by Suraram Village in east, Bollaram Industrial to the west, Bowrampet in the north and Whisper Valley towards the south. Apart from the manmade infrastructure, Bachupally is also a nature-lovers haven with lots of lakes and ponds in and around the area. The vicinity is cited to be a gold mine thanks to its greenery.</string>
    <string name="hbad_highlight1">1 BHK &amp; 2 BHK</string>
    <string name="hbad_highlight2">Over 10 Acres</string>
    <string name="hbad_highlight3">High rise multi storey buildings</string>
    <string name="hbad_highlight4">Yoga Center</string>
    <string name="hbad_highlight5">Library</string>
    <string name="hbad_highlight6">Party Lawn</string>
    <string name="continues">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="Nebula_privacy_policy_title"><u>Nebula™ User Privacy Policy</u></string>
    <string name="txtfornebula12"><p align="justify">Being a resolute Network Marketing Company the top priority of Nebula ™ will always be the relationship with its members/associates. We collect information that you would provide directly to us based on the scope of our Nebula™ app.</p></string>
    <string name="txtfornebulapfor2">Nebula™, as data controller, when activating and using the Nebula™ Services, how Nebula™ receives, collects and uses this data and how you may opt-out at any time, altogether preventing use of the data shared via the Services.</string>
    <string name="txtfornebulapfor3">Installation and Use</string>
    <string name="txtfornebulapfor4">After you install and use the Nebula™ App, Nebula™ will collect, process and retain personal information from you and any devices you may use connected with our application. This information may include the following: Storage, geo-location, telephone access, Your IP address, device manufacturer and type, Data operator, IMEI, connection information, screen resolution, camera, usage statistics and device log. This will help us serve you better.</string>
    <string name="txtfornebulapfor5">Map &amp; Location Information:</string>
    <string name="txtfornebulapfor6">Nebula™ app would have the access of Google Maps and Location services to enable you to locate our offices from the app itself and we will have a log of your location so that we can provide you the locations of your marketing network and downline members. Similarly members who have you in their marketing network will be able to track your location. Your location will not be public but will be accessible to your direct upline members only.</string>
    <string name="txtfornebulapfor7">Contacts Information:</string>
    <string name="txtfornebulapfor8">If you permit the Nebula™ app to access the address book on your device, we may access and store names and contact information from your address book to enable marketing interactions of the concerned contacts based on their history. We will send marketing SMS, emails and/or call your contacts from your phone book. Your contact book is completely private with us and is only meant for marketing and promotional purposes.</string>
    <string name="txtfornebulapfor9">Device Information:</string>
    <string name="txtfornebulapfor10">We may collect information about your mobile device, including, for example, the hardware model, operating system and version, software version, IMEI, unique device identifier, advertising identifiers, serial number, device motion information, device IP address and mobile network information. This info will help us understand the device specific issues and help us resolve errors with more precision. Your device information will remain confidential and private with us.</string>
    <string name="txtfornebulapfor11">Nebula™may use Push Notification Services to notify you about up-dates and important information. In such cases, your phone number may be part of the notification. This message is sent to the push notification service provider, for delivery to your device. You may, however, at any time-opt out or disable push notifications in the Nebula™app.</string>
    <string name="txtfornebulapfor12">Nebula™app will upload your personal details and your device information on a secure server. This information stored on our server is never circulated or shared with any third party applications or entities.</string>
    <string name="txtfornebulapfor13">Please note that Nebula™ or Nebula Companies do not responsibility if a user copies, uploads downline data on a third party app or any other server. Please be very cautious before sharing your data with any third party app claiming to be associated with us. Nebula™ app is not responsible for any loss of user data.</string>
    <string name="title_app_lan">Application Language</string>
    <string name="lang_english">English</string>
    <string name="lang_hindi">हिंदी</string>
    <string name="lang_telugu">తెలుగు</string>
    <string name="lang_gujarati">ગુજરાતી</string>
    <string name="lang_tamil">தமிழ்</string>
    <string name="chennai_email_address" translatable="false"><u>happychennai@nebulacompanies.com</u></string>
    <string name="site_office_chennai" translatable="false">SITE OFFICE, CHENNAI</string>
    <string name="corporate_office_chennai_address" translatable="false">OPP. Mahindra World City Main Entrance, G.S.T Main Rd, Chennai, Tamil Nadu - 603204</string>
    <string name="corporate_office_chennai_phone_number" translatable="false">044 6741 9777</string>
    <string name="enter_block_no" translatable="false">Enter Block</string>
    <string name="enter_flat_no" translatable="false">Enter Flat No</string>
</resources>