<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:id="@+id/scroller1"
    android:scrollbars="vertical">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fefcfc">

        <com.nebulacompanies.nebula.view.MyBoldTextView
            android:text="@string/Nebula_privacy_policy_title"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:textSize="@dimen/dimen_large_callibri"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <com.nebulacompanies.nebula.view.JustifiedTextView
            android:id="@+id/txtfornebula12"
            android:text="@string/txtfornebula12"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/dimen_normal_callibri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingBottom="@dimen/dimen_five_dp"/>
        <com.nebulacompanies.nebula.view.JustifiedTextView
            android:text="@string/txtfornebulapfor2"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingBottom="@dimen/dimen_five_dp"
            android:textSize="@dimen/dimen_normal_callibri"/>
        <com.nebulacompanies.nebula.view.BoldTextView
            android:text="@string/txtfornebulapfor3"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/dimen_large_callibri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginStart="5dp" />
        <com.nebulacompanies.nebula.view.JustifiedTextView
            android:text="@string/txtfornebulapfor4"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingBottom="@dimen/dimen_five_dp"
            android:textSize="@dimen/dimen_normal_callibri"/>
        <com.nebulacompanies.nebula.view.BoldTextView
            android:text="@string/txtfornebulapfor5"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/dimen_large_callibri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginStart="5dp" />
        <com.nebulacompanies.nebula.view.JustifiedTextView
            android:text="@string/txtfornebulapfor6"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingBottom="@dimen/dimen_five_dp"
            android:textSize="@dimen/dimen_normal_callibri"/>
        <com.nebulacompanies.nebula.view.BoldTextView
            android:text="@string/txtfornebulapfor7"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/dimen_large_callibri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginStart="5dp" />
        <com.nebulacompanies.nebula.view.JustifiedTextView
            android:text="@string/txtfornebulapfor8"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingBottom="@dimen/dimen_five_dp"
            android:textSize="@dimen/dimen_normal_callibri"/>
        <com.nebulacompanies.nebula.view.BoldTextView
            android:text="@string/txtfornebulapfor9"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/dimen_large_callibri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginStart="5dp" />
        <com.nebulacompanies.nebula.view.JustifiedTextView
            android:text="@string/txtfornebulapfor10"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingBottom="@dimen/dimen_five_dp"
            android:textSize="@dimen/dimen_normal_callibri"/>
        <com.nebulacompanies.nebula.view.JustifiedTextView
            android:text="@string/txtfornebulapfor11"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingBottom="@dimen/dimen_five_dp"
            android:textSize="@dimen/dimen_normal_callibri"/>

        <com.nebulacompanies.nebula.view.JustifiedTextView
            android:text="@string/txtfornebulapfor12"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingBottom="@dimen/dimen_five_dp"
            android:textSize="@dimen/dimen_normal_callibri"/>

        <com.nebulacompanies.nebula.view.JustifiedTextView
            android:text="@string/txtfornebulapfor13"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:paddingBottom="@dimen/dimen_five_dp"
            android:textSize="@dimen/dimen_normal_callibri"/>
    </LinearLayout>
</ScrollView>
