<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/nebula"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.nebulacompanies.nebula.view.MyTextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/site_office_chennai"
            android:textColor="@android:color/white"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.1"
            android:src="@drawable/map" />

        <com.nebulacompanies.nebula.view.MyTextView
            android:id="@+id/address_titlews_hyderabad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.9"
            android:text="@string/corporate_office_chennai_address"
            android:textColor="@color/nebula"
            android:textSize="14dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.1"
            android:src="@drawable/phone" />

        <com.nebulacompanies.nebula.view.MyTextView
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.9"
            android:text="@string/corporate_office_chennai_phone_number"
            android:textColor="@color/nebula"
            android:textSize="14dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.1"
            android:src="@drawable/email" />

        <com.nebulacompanies.nebula.view.MyTextView
            android:id="@+id/email1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.9"
            android:background="@drawable/nebula_effect"
            android:text="@string/chennai_email_address"
            android:textColor="@color/nebula"
            android:textSize="14dp" />

    </LinearLayout>

</LinearLayout>